WIIS-6246: Fix datatable alignment

--- a/assets/scss/datatable.scss
+++ b/assets/scss/datatable.scss
@@ -35,7 +35,7 @@ table.wii-table {
 
     th {
         .dataTables_scrollBody & {
-            padding: 0 10px !important;
+            padding: 0 18px 0 10px !important;
         }
 
         .dataTables_scrollHead & {
